[project]
name = "fastapi-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio==4.2.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "uvicorn[standerd]>=0.46.0",
]
